# talos

./: .gitignore  .mcp.json  JOURNEY.md  README.md  ROADMAP.md  TESTING.md  VISION.md  pyproject.toml
talos/: __main__.py  agent.py  banner.py  cli.py  config.py  context.py  context_manager.py  kde.py  obsidian.py  shell.py  suggestions.py  theme.py  tools.py  tui.py
talos-firefox/: package-lock.json  package.json  sidebar.html  vite.config.js
talos-firefox/public/: background.js  content.js  manifest.json
talos-firefox/src/: App.svelte  api.js  main.js  providers.js  suggestions.js  theme.css  utils.js
talos-firefox/src/components/: CodeBlock.svelte  ContextChip.svelte  ConversationPanel.svelte  InputBar.svelte  Message.svelte  MessageList.svelte  SettingsPanel.svelte  StatusBadge.svelte  Toolbar.svelte
talos-firefox/tests/: context-pruning.test.js  conversation-storage.test.js  message-parse.test.js  suggestions.test.js
tests/: test_agent_hivemind.py  test_bridge.py  test_completers.py  test_config.py  test_context.py  test_context_manager.py  test_conversation_persistence.py  test_dangerous.py  test_learning.py  test_parser.py  test_suggestions.py  test_tools.py  test_web.py
