[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talos"
version = "0.6.2"
description = "Local desktop AI for Linux + KDE Plasma"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "tlee933" }]

dependencies = [
    "rich>=13.0",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]
tui = ["textual>=1.0"]

[project.scripts]
talos = "talos.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"
